Wed Aug 24 13:06:17 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Block.cpp: Replaced the recursive version of
          ACE_Message_Block::clone() with a non-recursive version to avoid
          problems when there are large numbers of message blocks.  Thanks
          to Andrew Metcalfe <andrew dot metcalfe at ccur dot com> for
          reporting this and suggesting the fix, which was provided by
          Eric Frias <efrias at syncad dot com>.

Tue Aug 23 18:20:02 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Prepared for next release

        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Updated to make the new release public

Tue Aug 23 19:01:44 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.0.4 released.

Thu Aug 18 01:31:48 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Message_Block.cpp:

          Reverted the change from Mon Aug 15 14:41:24 UTC 2011 Douglas
          C. Schmidt <schmidt@dre.vanderbilt.edu>. This change caused a
          regression failure that showed up on some of the TAO tests. We
          can try reintroducing this patch after the upcoming release.

Wed Aug 17 15:01:28 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ACE-INSTALL.html:

          Fix typo in SYSROOT default example.

Wed Aug 17 13:54:12 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Message_Block.cpp:

          Unfuzz.

Mon Aug 15 14:41:24 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Block.cpp: Replaced the recursive version of
          ACE_Message_Block::clone() with a non-recursive version to avoid
          problems when there are large numbers of message blocks.  Thanks
          to Andrew Metcalfe <andrew dot metcalfe at ccur dot com> for